--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
+  "homepage": "http://voooodoo.github.io/react-airport",
   "name": "react_task-boilerplate-ci",
   "version": "0.1.0",
   "private": true,
   "keywords": [],
   "author": "Mate Academy",
   "license": "GPL-3.0",
-  "homepage": ".",
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -21,6 +21,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-react": "^7.13.0",
+    "gh-pages": "^2.0.1",
     "stylelint": "^10.0.0"
   },
   "scripts": {
@@ -28,7 +29,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "git subtree push --prefix build origin gh-pages"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
