--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://voooodoo.github.io/react-airport",
+  "homepage": "https://voooodoo.github.io/react-airport",
   "name": "react-airport",
   "version": "0.1.0",
   "private": true,
