--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://voooodoo.github.io/react-airport",
-  "name": "react-airport",
+  "homepage": "https://voooodoo.github.io/react_airport",
+  "name": "react_airport",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
